--- a/opdracht_4.1/opdracht_4.1/style.css
+++ b/opdracht_4.1/opdracht_4.1/style.css
@@ -1,35 +1,46 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
-h1{
-font-size: 24px;
-font-weight: bold;
-color: blue;
+.header-1{
+    width: 100vw;
+    height: 33vw;
+   background-image: url(img/360_F_442215355_AjiR6ogucq3vPzjFAAEfwbPXYGqYVAap.jpg);
+}
+article{
+    border-style: solid;
+    border-color: black black black purple; /* red top, green right, blue bottom and yellow left */
+    border-radius: 2%;
+    border-left: 10px solid purple;
+    }
+
+h1 {
+  font-size: 24px;
+  font-weight: bold;
+  color: yellow;
 }
 
-h2{
-    font-size: 20px;
-    color: #0000ff;
-    font-weight:bold;
+h2 {
+  font-size: 20px;
+  color: #0000ff;
+  font-weight: bold;
 }
 
-h3{
-font-size: 16px;
-color: teal;
-font-weight: bold;
+h3 {
+  font-size: 16px;
+  color: teal;
+  font-weight: bold;
 }
-p{
-    color: #4d4d4d;
-    font-size: bold;
-    
+p {
+  color: #4d4d4d;
+  font-size: bold;
 }
 
-.images{
-    width: 50vw;
+.images {
+  width: 50vw;
 }
-a{
-text-decoration: none;
-color: #8A2BE2;
+a {
+  text-decoration: none;
+  color: #8a2be2;
 }
