--- a/opdracht_3.1/P1-html-css-layout-main/style.css
+++ b/opdracht_3.1/P1-html-css-layout-main/style.css
@@ -44,6 +44,7 @@ nav img {
   background: url(img/opp-2.jpg);
   height: 50vw;
   width: 100vw;
+  background-position: center;
 }
 h1{
   font-style: italic;
